unpackaged/main/default/objects/Historique__c/Historique__c.object-meta.xml
<CustomObject>
    <label>Historique</label>
    <nameField>
        <displayFormat>His-{0000}</displayFormat>
        <label>Nom de Historique</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>