unpackaged/main/default/objects/Historique__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code(agence)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>