unpackaged/main/default/objects/Historique__c/fields/Contrat__c.field-meta.xml
<CustomField>
    <fullName>Contrat__c</fullName>
    <label>N° Contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>