unpackaged/main/default/objects/Historique__c/fields/Controle__c.field-meta.xml
<CustomField>
    <fullName>Controle__c</fullName>
    <label>Contrôle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>