unpackaged/main/default/objects/Historique__c/fields/Debut_du_contrat__c.field-meta.xml
<CustomField>
    <fullName>Debut_du_contrat__c</fullName>
    <label>Début du contrat</label>
    <type>DateTime</type>
</CustomField>