unpackaged/main/default/objects/Historique__c/fields/Debut_miseAdisposition__c.field-meta.xml
<CustomField>
    <fullName>Debut_miseAdisposition__c</fullName>
    <label>Début mise à disposition</label>
    <type>DateTime</type>
</CustomField>