unpackaged/main/default/objects/Historique__c/fields/Fin_du_contrat__c.field-meta.xml
<CustomField>
    <fullName>Fin_du_contrat__c</fullName>
    <label>Fin du contrat</label>
    <type>DateTime</type>
</CustomField>