unpackaged/main/default/objects/Historique__c/fields/Fin_miseAdisposition__c.field-meta.xml
<CustomField>
    <fullName>Fin_miseAdisposition__c</fullName>
    <label>Fin mise à disposition</label>
    <type>DateTime</type>
</CustomField>