unpackaged/main/default/objects/Historique__c/fields/Igloo_KEY_site__c.field-meta.xml
<CustomField>
    <fullName>Igloo_KEY_site__c</fullName>
    <label>Igloo KEY (site)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>