unpackaged/main/default/objects/Historique__c/fields/KPI_jours_IMMOBILISEES__c.field-meta.xml
<CustomField>
    <fullName>KPI_jours_IMMOBILISEES__c</fullName>
    <formula>KPI_IMMOBILISEES__c *   Nombre_jours_ouvres__c</formula>
    <label>KPI_jours_IMMOBILISEES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>