unpackaged/main/default/objects/Historique__c/fields/KPI_Jours_Relais__c.field-meta.xml
<CustomField>
    <fullName>KPI_Jours_Relais__c</fullName>
    <formula>KPI_RELAIS__c *  Nombre_jours_ouvres__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI_Jours_Relais</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>