unpackaged/main/default/objects/Historique__c/fields/KPI_Operationnel__c.field-meta.xml
<CustomField>
    <fullName>KPI_Operationnel__c</fullName>
    <formula>CASE(
Type_miseAdisposition__c ,
&#39;ALD&#39;,1,
&#39;CD&#39;,1,
&#39;CDM&#39;,1,
&#39;CDM DISPO&#39;,1,
&#39;DISPO CLI&#39;,1,
&#39;LD&#39;,1,
&#39;LD DISPO&#39;,1,
&#39;SURLOC CD&#39;,1,
&#39;SURLOC CDM&#39;,1,
0
)</formula>
    <label>KPI_Operationnel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>