unpackaged/main/default/objects/Historique__c/fields/KPI_RELAIS__c.field-meta.xml
<CustomField>
    <fullName>KPI_RELAIS__c</fullName>
    <formula>CASE(
 Type_miseAdisposition__c ,
&#39;RELAIS&#39;,1,
&#39;RELAIS MULET&#39;,1,
&#39;SURLOC REL&#39;,1,
0
)</formula>
    <label>KPI_RELAIS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>