unpackaged/main/default/objects/Historique__c/fields/Libelle_agence__c.field-meta.xml
<CustomField>
    <fullName>Libelle_agence__c</fullName>
    <label>Libellé (agence)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>