unpackaged/main/default/objects/Historique__c/fields/N_Parc_misAdisposition__c.field-meta.xml
<CustomField>
    <fullName>N_Parc_misAdisposition__c</fullName>
    <label>N° Parc mis à disposition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>