unpackaged/main/default/objects/Historique__c/fields/N_Parc_sur_contrat__c.field-meta.xml
<CustomField>
    <fullName>N_Parc_sur_contrat__c</fullName>
    <label>N° ¨Parc sur contrat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>