unpackaged/main/default/objects/Historique__c/fields/Nbre_jours_ouvr_s_heure__c.field-meta.xml
<CustomField>
    <fullName>Nbre_jours_ouvr_s_heure__c</fullName>
    <formula>ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE(  Fin_miseAdisposition__c  ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Fin_miseAdisposition__c  ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( Fin_miseAdisposition__c  - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE(  Debut_miseAdisposition__c  ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( Debut_miseAdisposition__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( Debut_miseAdisposition__c  - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
    <label>Nbre jours ouvrés heure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>