unpackaged/main/default/objects/Historique__c/fields/Nom_commercial__c.field-meta.xml
<CustomField>
    <fullName>Nom_commercial__c</fullName>
    <label>Nom commercial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>