unpackaged/main/default/objects/Historique__c/fields/Nombre_de_jours_calendaires__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_jours_calendaires__c</fullName>
    <description>Nombre de jours entre la date de début de disposition et la date de fin de disposition</description>
    <formula>Fin_miseAdisposition__c -  Debut_miseAdisposition__c</formula>
    <label>Nombre de jours calendaires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>