unpackaged/main/default/objects/Historique__c/fields/Nombre_jours_ouvres__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_ouvres__c</fullName>
    <formula>ABS(

CASE(MOD (datevalue(   Debut_miseAdisposition__c )- DATE(1985,6,24),7),
0 , CASE( MOD( Datevalue(  Fin_miseAdisposition__c  ) - datevalue(Debut_miseAdisposition__c )
,7),1,2,2,3,3,4,4,5,5,5,6,5,1)
,
1 , CASE( MOD( Datevalue( Fin_miseAdisposition__c) - datevalue(Debut_miseAdisposition__c )
,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Datevalue( Fin_miseAdisposition__c) - datevalue(Debut_miseAdisposition__c )
,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Datevalue( Fin_miseAdisposition__c) - datevalue(Debut_miseAdisposition__c )
,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Datevalue( Fin_miseAdisposition__c) - datevalue(Debut_miseAdisposition__c )
,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Datevalue( Fin_miseAdisposition__c ) - datevalue(Debut_miseAdisposition__c )
,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Datevalue( Fin_miseAdisposition__c ) - datevalue(Debut_miseAdisposition__c )
,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR((( Fin_miseAdisposition__c) - ( Debut_miseAdisposition__c ) )/7)*5)-1 +

( Fin_miseAdisposition__c - Debut_miseAdisposition__c ) - (datevalue( Fin_miseAdisposition__c ) -
datevalue(Debut_miseAdisposition__c))
)</formula>
    <label>Nombre de jours ouvrés</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>