unpackaged/main/default/objects/Historique__c/fields/Parc__c.field-meta.xml
<CustomField>
    <fullName>Parc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N° Parc</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Historiques</relationshipLabel>
    <relationshipName>Historiques</relationshipName>
    <type>Lookup</type>
</CustomField>