unpackaged/main/default/objects/Historique__c/fields/Pays_Region__c.field-meta.xml
<CustomField>
    <fullName>Pays_Region__c</fullName>
    <label>Pays / Région(agence)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>