unpackaged/main/default/objects/Historique__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <label>Période</label>
    <length>255</length>
    <type>Text</type>
</CustomField>