unpackaged/main/default/objects/Historique__c/fields/TECH_ID_Ultimate_Account__c.field-meta.xml
<CustomField>
    <fullName>TECH_ID_Ultimate_Account__c</fullName>
    <formula>Client__r.UltimateAccount__r.Id</formula>
    <label>TECH_ID_Ultimate_Account</label>
    <type>Text</type>
</CustomField>