unpackaged/main/default/objects/Historique__c/fields/Type_intervention__c.field-meta.xml
<CustomField>
    <fullName>Type_intervention__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d’intervention</label>
    <type>Text</type>
</CustomField>