unpackaged/main/default/objects/Historique__c/fields/Type_miseAdisposition__c.field-meta.xml
<CustomField>
    <fullName>Type_miseAdisposition__c</fullName>
    <label>Type de mise à disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CD</fullName>
                <color>#33CCFF</color>
                <label>CD</label>
            </value>
            <value>
                <fullName>CDM</fullName>
                <color>#33CC00</color>
                <label>CDM</label>
            </value>
            <value>
                <fullName>LD</fullName>
                <color>#006600</color>
                <label>LD</label>
            </value>
            <value>
                <fullName>RELAIS</fullName>
                <color>#FF6600</color>
                <label>RELAIS</label>
            </value>
            <value>
                <fullName>ADO</fullName>
            </value>
            <value>
                <fullName>ALD</fullName>
            </value>
            <value>
                <fullName>A RETIRER</fullName>
            </value>
            <value>
                <fullName>ATE CDM</fullName>
            </value>
            <value>
                <fullName>ATE EXT</fullName>
            </value>
            <value>
                <fullName>ATE EXT CDM</fullName>
            </value>
            <value>
                <fullName>ATE EXT LD</fullName>
            </value>
            <value>
                <fullName>ATE EXT MU</fullName>
            </value>
            <value>
                <fullName>ATE LD</fullName>
            </value>
            <value>
                <fullName>ATELIER</fullName>
            </value>
            <value>
                <fullName>ATE MULET</fullName>
            </value>
            <value>
                <fullName>A VENDRE</fullName>
            </value>
            <value>
                <fullName>CDM DISPO</fullName>
            </value>
            <value>
                <fullName>CD MULET</fullName>
            </value>
            <value>
                <fullName>DISPO</fullName>
            </value>
            <value>
                <fullName>DISPO CLI</fullName>
            </value>
            <value>
                <fullName>DISPO CONT</fullName>
            </value>
            <value>
                <fullName>DISPO DEP</fullName>
            </value>
            <value>
                <fullName>DISPO NEUT</fullName>
            </value>
            <value>
                <fullName>EN SERVICE</fullName>
            </value>
            <value>
                <fullName>FAB AV</fullName>
            </value>
            <value>
                <fullName>FAB AV EXT</fullName>
            </value>
            <value>
                <fullName>FAB LD</fullName>
            </value>
            <value>
                <fullName>FAB LD EXT</fullName>
            </value>
            <value>
                <fullName>HORS PARC</fullName>
            </value>
            <value>
                <fullName>LD DISPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>