unpackaged/main/default/objects/Historique__c/fields/Ville_exploitation_site__c.field-meta.xml
<CustomField>
    <fullName>Ville_exploitation_site__c</fullName>
    <label>Ville exploitation (site)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>