unpackaged/main/default/objects/Historique__c/recordTypes/Historique.recordType-meta.xml
<RecordType>
    <fullName>Historique</fullName>
    <active>true</active>
    <label>Historique</label>
</RecordType>