unpackaged/main/default/objects/Historique__c/listViews/CD_CDM_LD.listView-meta.xml
<ListView>
    <fullName>CD_CDM_LD</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>N_Parc_sur_contrat__c</columns>
    <columns>Parc__c</columns>
    <columns>N_Parc_misAdisposition__c</columns>
    <columns>Contrat__c</columns>
    <columns>Statut_Contrat__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_miseAdisposition__c</field>
        <operation>equals</operation>
        <value>CD,CDM,LD</value>
    </filters>
    <label>CD/CDM/LD</label>
</ListView>